minor fix for accordion tables - left border not showing up in content of accordions

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -80,6 +80,14 @@
   background-color: #FAFAD2;
 }
 
+#crm-container .row-highlighted {
+  margin: 0px;
+  padding: 3px 0px 3px 0px;
+  clear: none;
+  background-color: #FAFAD2;
+}
+
+
 
 /*
 ** Size input fields in crm-container by class. Classes are assigned by the
@@ -365,13 +373,17 @@ div.spacer,
   text-align: center;
 }
 
-#crm-container .form-layout td.label, #crm-container .form-layout-compressed td.label, #crm-container .selector td.label, #crm-container .form-layout-compressed th.label {
+#crm-container .form-layout td.label, 
+#crm-container .form-layout-compressed td.label, 
+#crm-container .selector td.label, 
+#crm-container .form-layout-compressed th.label {
   text-align: right;
   padding: 0.5em 0.5em 0.5em 0.75em;
   border: 0px none;
   vertical-align: top;
 }
-#crm-container .form-layout td.label, #crm-container .form-layout-compressed td.label {
+#crm-container .form-layout td.label, 
+#crm-container .form-layout-compressed td.label {
   width: 20%;
 }
 
@@ -380,7 +392,8 @@ div.spacer,
   font-style: italic;
 }
 
-#crm-container .form-layout td.label-left, #crm-container .form-layout-compressed td.label-left {
+#crm-container .form-layout td.label-left, 
+#crm-container .form-layout-compressed td.label-left {
   text-align: left;
   padding: 0.5em 0.50em 0em 0.75em;
   border: 0px none;
@@ -392,7 +405,8 @@ div.spacer,
  border-right: 1px solid #dddddd;
 }
 
-#crm-container .form-layout td.view-value, #crm-container .form-layout-compressed td.view-value {
+#crm-container .form-layout td.view-value, 
+#crm-container .form-layout-compressed td.view-value {
   text-align: left;
   padding: 0.5em 0em 0em 0.5em;
   border: 0px none;
@@ -474,8 +488,10 @@ div.spacer,
   margin: 1.0em 0em 1.0em;
   border: 1px solid #CCCCCC;
 	}	
-	#crm-container .messages table, #crm-container-snippet .messages table {width: auto;}
-	#crm-container .messages table td, #crm-container-snippet .messages table td { 
+	#crm-container .messages table, 
+	#crm-container-snippet .messages table {width: auto;}
+	#crm-container .messages table td, 
+	#crm-container-snippet .messages table td { 
 		background-color: #F7F7F7;
 		border-bottom: 1px solid #DDDDDD;
 		}
@@ -751,7 +767,9 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
     border-right: 1px solid #999999;
 }
 
-#crm-container #map-field td, #crm-container .report td, #crm-container .chart td {
+#crm-container #map-field td, 
+#crm-container .report td, 
+#crm-container .chart td {
     padding: 10px 10px 4px 10px;
 }
 
@@ -1191,7 +1209,8 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
 } 
 
 /* class for tinymce buttons display */
-#crm-container table.mceLayout td,#crm-container table.mceLayout table{ 
+#crm-container table.mceLayout td,
+#crm-container table.mceLayout table{ 
     padding: 0px;
     background: #EDEDED;
     border: 2px solid #EDEDED;
@@ -1395,7 +1414,8 @@ table.campaign td,
     border-bottom-color: #999999;
 }
 
-#crm-container table#activities-selector.nestedActivitySelector, #crm-container table#activities-selector.nestedActivitySelector td {
+#crm-container table#activities-selector.nestedActivitySelector, 
+#crm-container table#activities-selector.nestedActivitySelector td {
     border: 0px;
 }    
 
@@ -2155,12 +2175,13 @@ div#toolTip {
  #crm-container #membership-listings,
  #crm-container #premiums-listings,
  #crm-container #searchForm table {
-  margin: 0em;
-  width: 98%;	
-  border-collapse: collapse;
-  border: 0px none;
-} 
-
+  	margin: 0em;
+  	width: 98%;	
+  	border-collapse: collapse;
+  	border: 0px none;
+	} 
+	#crm-container #searchForm table {margin: 0em 0 0 1px;} /* fix left border not showing up in content of accordion menus */
+	
 /* Override Drupal .2em margin-bottom on forms for Dashboard elements (we don't want to give up that space) */
 div#civicrm-dashboard form {
 margin-bottom:0em;
